Improved UI for Map and Reccomendation Page

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,13 @@ nav li {
   text-decoration: none;
   background-color: #999;
 }
-.recom-header{
-  padding:0;
+.recom{
+  width:100%;
+  background-image: url('restro-background.jpg');
+  color:white;
+ font-family: 'Roboto', sans-serif;
+ font-size: 2rem;
+}
+.five{
+  color: black;
 }
