--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@
 }
 
 .App-header {
+  position:relative;
+  top: 30px;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -58,4 +60,20 @@ nav li {
 }
 .recom-header{
   padding:0;
+}
+.logout-heading{
+    text-align: left;
+    font-size: 30px;
+    top: 90px;
+    left: 100px;
+    font-family: "Copperplate", Fantasy;
+    color: #1C1D21;
+}
+#logout-button{
+    position:absolute; 
+    top: 90px; 
+    right: 30px;
+}
+#navbar{
+  display: none;
 }
