updated reccomendation page ui

--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,11 @@ nav li {
   color:white;
  font-family: 'Roboto', sans-serif;
  font-size: 2rem;
+ min-height:80vh;
 }
 .five{
   color: black;
+}
+#arrow{
+  height:20%;
 }
