--- a/src/Login.css
+++ b/src/Login.css
@@ -1,5 +1,5 @@
-html{
-    background-image: linear-gradient(#5DEAEF, #356F7C);
+.background{
+    background-image: -webkit-linear-gradient(#5CE1E6,#5CE1E6, #356F7C);
     font-size: 1rem;
     font-family: "Copperplate", Fantasy;
     color:#1C1D21;
@@ -79,7 +79,7 @@ h2{
 }
 .creatorInfo{
     position:relative;
-    top: 200px;
+    top: 150px;
     width: 100%;
     margin: auto;
     text-align: left;
