--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@ nav li {
   width:100%;
   background-image: url('restro-background.jpg');
   color:white;
-  min-height:80vh;;
+  min-height:80vh;
 }
 .five{
   color: black;
