--- a/src/ViewEvents.css
+++ b/src/ViewEvents.css
@@ -16,6 +16,7 @@
   z-index: 0;
   font-size: small;
   width: 520px;
+  position: relative;
 }
 
 .box h4 {
@@ -43,4 +44,27 @@
 
 .picture {
   margin: 10px;
+}
+
+.front button:hover {
+  cursor: pointer;
+  background-color: #C0C0C0;
+  color: white;
+}
+
+.main-container{
+  position: relative;
+}
+.main-container:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.4;
+  background-image: url('restro-background.jpg');
+  background-repeat: repeat repeat;
+  background-position: 50%, 0;
 }
