--- a/src/Search.css
+++ b/src/Search.css
@@ -12,9 +12,18 @@
   font-family: "Inter", sans-serif;
   font-size: calc(0.6rem + 0.4vw);
   color: var(--color-text);
-  background: var(--color-background);
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  align:center;
+  background-image: url('restro-background.jpg');
+  background-position: 50%, 0;
   font-weight: 300;
   padding: 0 calc(var(--size-bezel) * 3);
+  justify-content: center;
 }
 
 h1,
@@ -37,6 +46,7 @@ mark {
   border-radius: var(--size-radius);
   border: 3px solid var(--color-shadow, currentColor);
   box-shadow: 0.5rem 0.5rem 0 var(--color-shadow, currentColor);
+  justify-content: center;
 }
 .card--inverted {
   --color-background: var(--color-dark);
@@ -44,10 +54,15 @@ mark {
   --color-shadow: var(--color-accent);
 }
 .card--accent {
-  text-align: center;
   --color-background: var(--color-signal);
   --color-accent: var(--color-light);
   color: var(--color-dark);
+  justify-content: center;
+}
+.center {
+  display: flex;
+  justify-content: center;
+  margin: 5px;
 }
 .card *:first-child {
   margin-top: 0;
@@ -56,6 +71,7 @@ mark {
 .l-design-widht {
   max-width: 40rem;
   padding: 1rem;
+  justify-content: center;
 }
 
 .input {
