--- a/src/Search.css
+++ b/src/Search.css
@@ -13,17 +13,11 @@
   font-size: calc(0.6rem + 0.4vw);
   color: var(--color-text);
   display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  align:center;
+
   background-image: url('restro-background.jpg');
   background-position: 50%, 0;
   font-weight: 300;
   padding: 0 calc(var(--size-bezel) * 3);
-  justify-content: center;
 }
 
 h1,
@@ -46,7 +40,11 @@ mark {
   border-radius: var(--size-radius);
   border: 3px solid var(--color-shadow, currentColor);
   box-shadow: 0.5rem 0.5rem 0 var(--color-shadow, currentColor);
-  justify-content: center;
+  display: inline-block;
+  position: absolute;
+  width: 50%;
+  /*left: 50%;*/
+  /*right: 50%;*/
 }
 .card--inverted {
   --color-background: var(--color-dark);
@@ -57,15 +55,12 @@ mark {
   --color-background: var(--color-signal);
   --color-accent: var(--color-light);
   color: var(--color-dark);
-  justify-content: center;
 }
 .center {
   display: flex;
-  justify-content: center;
   margin: 5px;
 }
 .card *:first-child {
-  margin-top: 0;
 }
 
 .l-design-widht {
