change launch page ui to match the yellow

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ nav li {
   padding: 10px;
   text-decoration: none;
   background-color: #999;
+  background-color: #FAB700;
 }
 .recom-header{
   padding:0;
