--- a/src/Login.css
+++ b/src/Login.css
@@ -1,5 +1,5 @@
 .background{
-    background-image: -webkit-linear-gradient(#5CE1E6,#5CE1E6, #356F7C);
+    background-image: -webkit-linear-gradient(#5CE1E6,#5CE1E6,#89D6A6, #FAB700);
     font-size: 1rem;
     font-family: "Copperplate", Fantasy;
     color:#1C1D21;
@@ -30,7 +30,7 @@ h2{
 
 .launchPage::before {    
     content: "";
-    background-image: url('https://flagshiprestaurantgroup.com/uploads/gallery/_1000xAUTO_fit_center-center_75/Flagship-Image-2010.jpg');
+    background-image: url('https://i.pinimg.com/originals/86/df/18/86df1812069612ac13550e857427f4c5.png');
     background-size: cover;
     position: absolute;
     background-attachment:fixed;
@@ -63,13 +63,14 @@ h2{
 }
 .ourMission{
     position:relative;
-    top: 150px;
+    top: 180px;
     width: 100%;
     margin: auto;
     text-align: center;
     font-size: 20px;
-    color: white;
-    background-color: #1C1D21;
+    color: #232220;
+    background-color: #FAB700;
+    box-shadow: 0 0 113px 1px #FAB700;;
     font-family: "Verdana", Sans-serif;
     padding-top: 10px;
     padding-right: 10px;
@@ -84,8 +85,8 @@ h2{
     margin: auto;
     text-align: left;
     font-size: 14px;
-    color:#CCFAFC;
-    background-color: #1F5A60;
+    color:#232220;
+    background-color: #A6CD7B;
     font-family: "Verdana", Sans-serif;
 }
 #logo{
