--- a/src/Login.css
+++ b/src/Login.css
@@ -86,7 +86,7 @@ h2{
     text-align: left;
     font-size: 14px;
     color:#232220;
-    background-color: #A6CD7B;
+    background-color: #89AD97;
     font-family: "Verdana", Sans-serif;
 }
 #logo{
