--- a/src/Search.css
+++ b/src/Search.css
@@ -14,7 +14,7 @@
   color: var(--color-text);
   display: block;
 
-  background-image: url('restro-background.jpg');
+  background-image: url('https://static7.depositphotos.com/1005738/765/v/600/depositphotos_7653702-stock-illustration-seamless-cutlery-pattern-in-blue.jpg');
   background-position: 50%, 0;
   font-weight: 300;
   padding: 0 calc(var(--size-bezel) * 3);
