--- a/src/ViewEvents.css
+++ b/src/ViewEvents.css
@@ -65,7 +65,7 @@
   width: 100%;
   height: 100%;
   opacity: 0.4;
-  background-image: url('restro-background.jpg');
+  background-color: white;
   background-repeat: repeat repeat;
   background-position: 50%, 0;
 }
