messing with the UI

--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,14 @@ nav li {
   min-height:80vh;
 }
 .five{
-  color: black;
+  height: 100%;
+  margin-top:15px;
+  position:relative;
+  color: #1C1D21;
+}
+.recommendations{
+  position:absolute;
+  top: 10px;
 }
 #arrow{
   height:20%;
